[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "subtrack"
version = "1.0.0"
description = "CLI/TUI subscription tracker — track all your subscriptions in the terminal"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "nomer" }]
keywords = ["subscription", "tracker", "tui", "cli", "finances"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Financial",
    "Typing :: Typed",
]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "textual>=3.0",
]

[project.scripts]
subtrack = "subtrack.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[tool.ruff]
target-version = "py39"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
